--- a/test.html
+++ b/test.html
@@ -9,6 +9,9 @@ var css = '<style type="text/css">' +
 jQuery(head).append(css);
 
         </script>
+
+<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+
     </head>
     <body>
     test
