--- a/test5.html
+++ b/test5.html
@@ -12,7 +12,7 @@
         width="100%" 
         height="100%"
         scrolling="yes"
-        allowfullscreen="true" 
+        allowfullscreen="no" 
         >
 </iframe>
     
