--- a/test5.html
+++ b/test5.html
@@ -10,12 +10,13 @@
         src="https://michelles-active-event.raisely.com/leaderboard#row--2" 
         style="border: none;"
         width="100%" 
-        height="100%"
-        scrolling="yes"
-        allowfullscreen="no" 
+        height="150"
+        scrolling="no"
+        allowfullscreen="false"
         >
 </iframe>
     
       
     </body>
     </html>
+
