--- a/test5.html
+++ b/test5.html
@@ -10,7 +10,7 @@
         src="https://michelles-active-event.raisely.com/leaderboard#row--2" 
         style="border: none;"
         width="100%" 
-        height="150"
+        height="100%"
         scrolling="no"
         allowfullscreen="false"
         >
