--- a/test5.html
+++ b/test5.html
@@ -7,7 +7,7 @@
     <body>
 
         <iframe
-        src="https://michelles-active-event.raisely.com/leaderboard-embed" 
+        src="https://michelles-active-event.raisely.com/leaderboard-embed#row--2" 
         style="border: none;"
         width="100%" 
         height="100%"
