--- a/example-giftaid-embed.html
+++ b/example-giftaid-embed.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <iframe 
-src="https://michelle-community.raisely.com/giftaidembed" 
+src="https://global-development-group-scio.raisely.com/testgiftaidpage" 
 
 style="border: none;" 
 width=100% 
