--- a/example-giftaid-embed.html
+++ b/example-giftaid-embed.html
@@ -5,14 +5,4 @@
     <title>title</title>
   </head>
   <body>
-    <iframe 
-src="https://global-development-group-scio.raisely.com/testgiftaidpage" 
-
-style="border: none;" 
-width=100% 
-height="920"
-scrolling="yes"
-allowfullscreen="true"
->
-</iframe>
-
+    <div class="raisely-donate" data-campaign-path="vanilla-donation-form" data-profile="" data-width="100%" data-height="800"><script src="https://cdn.raisely.com/v3/public/embed.js"></script></div>
