--- a/leaderboard-with-iframe.html
+++ b/leaderboard-with-iframe.html
@@ -7,7 +7,7 @@
     <body>
 
         <iframe
-        src="https://mt-demo.raisely.com/leaderboard" 
+        src="https://michelletestevent.raisely.com/leaderboard" 
         style="border: none;"
         width="100%" 
         height="100%"
