--- a/example-giftaid-embed.html
+++ b/example-giftaid-embed.html
@@ -5,4 +5,7 @@
     <title>title</title>
   </head>
   <body>
-    <div class="raisely-donate" data-campaign-path="vanilla-donation-form" data-profile="" data-width="100%" data-height="800"><script src="https://cdn.raisely.com/v3/public/embed.js"></script></div>
+    <div class="raisely-donate" data-campaign-path="michelles-giftaid-embed-test" data-profile="" data-width="100%" data-height="800"><script src="https://cdn.raisely.com/v3/public/embed.js"></script></div>
+
+    </body>
+    </html>
