--- a/thankyou.html
+++ b/thankyou.html
@@ -35,9 +35,18 @@
     
         <div id="showcase">
             <div class="container">
-                <h1>Afordable Professional Websites</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+                <h1>Thank you!</h1>
+ <script>              
+                function getUrlVars() {
+                    var vars = {};
+                    var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value) {
+                    vars[key] = value;
+                    });
+                    return vars;
+                    }
+</script> 
+
+
             </div>
         </div>
     
