--- a/thankyou.html
+++ b/thankyou.html
@@ -34,7 +34,7 @@
         </div>
     
         <div id="showcase">
-            <div class="container">
+            <div class="container" style="height:200px">
                 <h1>Thank you!</h1>
  <script>              
                 function getUrlVars() {
