--- a/progress-bar-embed-example.html
+++ b/progress-bar-embed-example.html
@@ -33,8 +33,8 @@
         <header class="masthead text-center text-white">
             <div class="masthead-content">
                 <div class="container px-5">
-                    <h1 class="masthead-heading mb-0">One Page Wonder</h1>
-                    <h2 class="masthead-subheading mb-0">Will Rock Your Socks Off</h2>
+                    <h1 class="masthead-heading mb-0">Demo site</h1>
+                    <h2 class="masthead-subheading mb-0">Let's embed a donation form and progress bar!</h2>
                     <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Donate</a>
                 </div>
             </div>
