--- a/progress-bar-embed-example.html
+++ b/progress-bar-embed-example.html
@@ -34,7 +34,7 @@
             <div class="masthead-content">
                 <div class="container px-5">
                     <h1 class="masthead-heading mb-0">Demo site</h1>
-                    <h2 class="masthead-subheading mb-0">Let's embed a donation form and progress bar!</h2>
+                <!--<h2 class="masthead-subheading mb-0">Let's embed a donation form and progress bar!</h2>-->
                     <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Donate</a>
                 </div>
             </div>
@@ -48,7 +48,7 @@
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">For those about to rock...</h2>
+                            <h2 class="display-4">Heading 2</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
                         </div>
                     </div>
@@ -64,7 +64,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="p-5">
-                            <h2 class="display-4">We salute you!</h2>
+                            <h2 class="display-4">Heading 2</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
                         </div>
                     </div>
@@ -80,7 +80,7 @@
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">Let there be rock!</h2>
+                            <h2 class="display-4">Heading 2</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
                         </div>
                     </div>
