--- a/progress-bar-embed-example.html
+++ b/progress-bar-embed-example.html
@@ -44,7 +44,8 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-lg-2">
-                        <div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/01.jpg" alt="..." /></div>
+                    <!--Let's embed our donation form!-->
+                    <div class="raisely-donate" data-campaign-path="lessons4lessons" data-profile="" data-width="100%" data-height="800"><script src="https://cdn.raisely.com/v3/public/embed.js"></script></div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
