--- a/progress-bar-embed-example.html
+++ b/progress-bar-embed-example.html
@@ -49,8 +49,19 @@
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">Heading 2</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                            <h2 class="display-4">Progress</h2>
+                            <!--Let's embed a progress bar!-->
+                            <div class="progressbar-embed">
+                            <iframe
+                            src="https://lessons4lessonstest.raisely.com/progressbar" 
+                            style="border: none;"
+                            width="100%" 
+                            height="150"
+                            scrolling="no"
+                            allowfullscreen="false"
+                            >
+                            </iframe>
+                            </div>
                         </div>
                     </div>
                 </div>
