--- a/progress-bar-embed-example.html
+++ b/progress-bar-embed-example.html
@@ -42,26 +42,27 @@
         <!-- Content section 1-->
         <section id="scroll">
             <div class="container px-5">
-                <div class="row gx-5 align-items-center">
+                <div class="row gx-5 align-items-top">
                     <div class="col-lg-6 order-lg-2">
+                                                    <!--Let's embed a progress bar!-->
+                                                    <div class="progressbar-embed">
+                                                        <iframe
+                                                        src="https://lessons4lessonstest.raisely.com/progressbar" 
+                                                        style="border: none;"
+                                                        width="100%" 
+                                height="150"
+                                scrolling="no"
+                                allowfullscreen="false"
+                                >
+                                </iframe>
+                              </div>
                     <!--Let's embed our donation form!-->
                     <div class="raisely-donate" data-campaign-path="lessons4lessons" data-profile="" data-width="100%" data-height="800"><script src="https://cdn.raisely.com/v3/public/embed.js"></script></div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
                             <h2 class="display-4">Progress</h2>
-                            <!--Let's embed a progress bar!-->
-                            <div class="progressbar-embed">
-                            <iframe
-                            src="https://lessons4lessonstest.raisely.com/progressbar" 
-                            style="border: none;"
-                            width="100%" 
-                            height="150"
-                            scrolling="no"
-                            allowfullscreen="false"
-                            >
-                            </iframe>
-                            </div>
+
                         </div>
                     </div>
                 </div>
