--- a/progress-bar-embed-example.html
+++ b/progress-bar-embed-example.html
@@ -35,21 +35,21 @@
                 <div class="container px-5">
                     <h1 class="masthead-heading mb-0">Demo site</h1>
                 <!--<h2 class="masthead-subheading mb-0">Let's embed a donation form and progress bar!</h2>-->
-                    <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Donate</a>
+                    <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#donate">Donate</a>
                 </div>
             </div>
         </header>
         <!-- Content section 1-->
-        <section id="scroll">
+        <section id="donate">
             <div class="container px-5">
                 <div class="row gx-5 align-items-top">
                     <div class="col-lg-6 order-lg-2">
-                                                    <!--Let's embed a progress bar!-->
-                                                    <div class="progressbar-embed">
-                                                        <iframe
-                                                        src="https://lessons4lessonstest.raisely.com/progressbar" 
-                                                        style="border: none;"
-                                                        width="100%" 
+                    <!--Let's embed a progress bar!-->
+                                <div class="progressbar-embed">
+                                <iframe
+                                src="https://lessons4lessonstest.raisely.com/progressbar" 
+                                style="border: none;"
+                                width="100%" 
                                 height="150"
                                 scrolling="no"
                                 allowfullscreen="false"
@@ -61,8 +61,8 @@
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">Progress</h2>
-
+                            <h2 class="display-4">Donate now 💕</h2>
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
         </section>
         <!-- Footer-->
         <footer class="py-5 bg-black">
-            <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; Your Website 2022</p></div>
+            <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; My Demo Website 2022</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
