--- a/progress-bar-embed-example.html
+++ b/progress-bar-embed-example.html
@@ -34,7 +34,7 @@
             <div class="masthead-content">
                 <div class="container px-5">
                     <h1 class="masthead-heading mb-0">Demo site</h1>
-                <!--<h2 class="masthead-subheading mb-0">Let's embed a donation form and progress bar!</h2>-->
+                    <h2 class="masthead-subheading mb-0">Embed a Raisely donation form and progress bar!</h2>
                     <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#donate">Donate</a>
                 </div>
             </div>
@@ -62,7 +62,10 @@
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
                             <h2 class="display-4">Donate now 💕</h2>
-                            <p></p>
+                            <p>Here we've used an iframe to embed a progress bar.</p>
+                            <p>First, in the Raisely campaign we create a new custom page, and only add the progress bar block.</p>
+                            <p>Then here, we've embedded that whole using and iframe, and adjust the height to fit the progress bar</p>
+                            <p>The donation form we use the embed code from Campaign > Settings > Donation Form > Embed</p>
                         </div>
                     </div>
                 </div>
