--- a/progress-bar-embed-example.html
+++ b/progress-bar-embed-example.html
@@ -63,7 +63,7 @@
                         <div class="p-5">
                             <h2 class="display-4">Donate now 💕</h2>
                             <p>Here we've used an iframe to embed a progress bar.</p>
-                            <p>First, in the Raisely campaign we create a new custom page, and only add the progress bar block.</p>
+                            <p>First, in the Raisely campaign we create a <a href="https://lessons4lessonstest.raisely.com/progressbar" target="_blank">new custom page, and only add the progress bar block.</a></p>
                             <p>Then here, we've embedded that whole using and iframe, and adjust the height to fit the progress bar</p>
                             <p>The donation form we use the embed code from Campaign > Settings > Donation Form > Embed</p>
                         </div>
