--- a/progress-bar-embed-example.html
+++ b/progress-bar-embed-example.html
@@ -63,9 +63,28 @@
                         <div class="p-5">
                             <h2 class="display-4">Donate now 💕</h2>
                             <p>Here we've used an iframe to embed a progress bar.</p>
-                            <p>First, in the Raisely campaign we create a <a href="https://lessons4lessonstest.raisely.com/progressbar" target="_blank">new custom page, and only add the progress bar block.</a></p>
-                            <p>Then here, we've embedded that whole using and iframe, and adjust the height to fit the progress bar</p>
+                            <p>First, in the Raisely campaign we create a <a href="https://lessons4lessonstest.raisely.com/progressbar" target="_blank">new custom page, and only add the progress bar block</a></p>
+                            <p>Then, we've embedded that whole page using an iframe, and adjusted the height to fit the progress bar:</p>
+                            <div class="code">                              
+<pre><code class="language-html">
+&lt;iframe
+src="https://lessons4lessonstest.raisely.com/progressbar" 
+style="border: none;"
+width="100%" 
+height="150"
+scrolling="no"
+allowfullscreen="false"
+>
+&lt;/iframe&gt;
+</code></pre>
+
+                            </div>
                             <p>The donation form we use the embed code from Campaign > Settings > Donation Form > Embed</p>
+<img src="assets/img/embed.png" alt="embed from campaign" width="400px">                           
+<!-- <pre><code class="language-html">
+&lt;div class="raisely-donate" data-campaign-path="lessons4lessonstest" data-profile="" data-width="100%" data-height="800"&gt;&lt;script src="https://cdn.raisely.com/v3/public/embed.js"&gt;&lt;/script&gt;&lt;/div&gt;
+
+</code></pre> -->
                         </div>
                     </div>
                 </div>
@@ -111,5 +130,39 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <script>
+            const copyButtonLabel = "Copy Code";
+
+// use a class selector if available
+let blocks = document.querySelectorAll("pre");
+
+blocks.forEach((block) => {
+  // only add button if browser supports Clipboard API
+  if (navigator.clipboard) {
+    let button = document.createElement("button");
+
+    button.innerText = copyButtonLabel;
+    block.appendChild(button);
+
+    button.addEventListener("click", async () => {
+      await copyCode(block, button);
+    });
+  }
+});
+
+async function copyCode(block, button) {
+  let code = block.querySelector("code");
+  let text = code.innerText;
+
+  await navigator.clipboard.writeText(text);
+
+  // visual feedback that task is completed
+  button.innerText = "Code Copied";
+
+  setTimeout(() => {
+    button.innerText = copyButtonLabel;
+  }, 700);
+}
+        </script>
     </body>
 </html>
