--- a/progress-bar-embed-example.html
+++ b/progress-bar-embed-example.html
@@ -36,6 +36,8 @@
                     <h1 class="masthead-heading mb-0">Demo site</h1>
                     <h2 class="masthead-subheading mb-0">Embed a Raisely donation form and progress bar!</h2>
                     <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#donate">Donate</a>
+                    <p><sup>⬆️</sup> <br>
+                    <sup>Click the Donate button see it in action!</sup></p>
                 </div>
             </div>
         </header>
