--- a/embed-mt-demo.html
+++ b/embed-mt-demo.html
@@ -5,8 +5,4 @@
 
     </head>
     <body>
-
-        <div class="raisely-donate" data-campaign-path="mt-demo" data-profile="" data-width="100%" data-height="800"><script src="https://cdn.raisely.com/v3/public/embed.js"></script></div>
-      
-    </body>
-    </html>
+        <div class="raisely-donate" data-campaign-path="xmascountdown" data-profile="" data-width="100%" data-height="800"><script src="https://cdn.raisely.com/v3/public/embed.js"></script></div>    </html>
