--- a/embed-purl.html
+++ b/embed-purl.html
@@ -7,13 +7,7 @@
 </head>
 <body>
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-
-
-  <div class="raisely-donate" data-campaign-path="michelletestevent" data-profile="" data-width="100%" data-height="800"><script src="https://cdn.raisely.com/v3/public/embed.js"></script></div>
-
-
-
+  <div class="raisely-donate" data-campaign-path="tabs-nzd-test" data-profile="" data-width="100%" data-height="800"><script src="https://cdn.raisely.com/v3/public/embed.js"></script></div>
   <script>
   </script>
 </body>
