--- a/example-giftaid-embed.html
+++ b/example-giftaid-embed.html
@@ -7,5 +7,7 @@
   <body>
     <div class="raisely-donate" data-campaign-path="michelles-giftaid-embed-test" data-profile="" data-width="100%" data-height="800"><script src="https://cdn.raisely.com/v3/public/embed.js"></script></div>
 
+
+    <a href="mailto:test@test.com">email<i class="far fa-envelope"></i></a> 
     </body>
     </html>
