--- a/donate.html
+++ b/donate.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>
-      Landing Page
+      Donate - form embed demo
     </title>
     <meta name="description" content="Simple landind page" />
     <meta name="keywords" content="" />
@@ -19,7 +19,7 @@
     </style>
 
   </head>
-  <body class="leading-normal tracking-normal text-white bg-gradient-to-r from-pink-500 via-indigo-500 to-green-500" style="font-family: 'Source Sans Pro', sans-serif;">
+  <body class="leading-normal tracking-normal text-white bg-gradient-to-r from-pink-700 via-purple-500 to-green-300" style="font-family: 'Source Sans Pro', sans-serif;">
     <!--Nav-->
     <nav id="header" class="fixed w-full z-30 top-0 text-white">
       <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
@@ -76,7 +76,9 @@
         </div>
         <!--Right Col-->
         <div class="w-full md:w-3/5 py-6 text-center">
-          <img class="w-full md:w-4/5 z-50" src="https://images.unsplash.com/photo-1707343843344-011332037abb?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
+            <div class="raisely-donate" data-campaign-path="mt-demo" data-profile="" data-width="100%" data-height="800">
+                <script src="https://cdn.raisely.com/v3/public/embed.js"></script>
+            </div>
         </div>
       </div>
     </div>
@@ -105,7 +107,7 @@
           Title
         </h2>
         <div class="w-full mb-4">
-          <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
+          <div class="h-1 mx-auto bg-gradient-to-r from-red-500 via-purple-500 to-green-300 w-64 opacity-25 my-0 py-0 rounded-t"></div>
         </div>
         <div class="flex flex-wrap">
           <div class="w-5/6 sm:w-1/2 p-6">
@@ -442,7 +444,7 @@
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-start">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+              <button class="mx-auto lg:mx-0 hover:underline text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
                 Action
               </button>
             </div>
@@ -464,7 +466,7 @@
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-center">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+              <button class="mx-auto lg:mx-0 hover:underline bg-gradient-to-r from-red-500 via-purple-500 to-green-300 text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
                 Action
               </button>
             </div>
@@ -486,7 +488,7 @@
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-end">
-              <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+              <button class="mx-auto lg:mx-0 hover:underline bg-gradient-to-r from-red-500 via-purple-500 to-green-300 text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
                 Action
               </button>
             </div>
@@ -500,7 +502,7 @@
           Pricing
         </h2>
         <div class="w-full mb-4">
-          <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
+          <div class="h-1 mx-auto bg-gradient-to-r from-red-500 via-purple-500 to-green-300 w-64 opacity-25 my-0 py-0 rounded-t"></div>
         </div>
         <div class="flex flex-col sm:flex-row justify-center pt-12 my-12 sm:my-4">
           <div class="flex flex-col w-5/6 lg:w-1/4 mx-auto lg:mx-0 rounded-none lg:rounded-l-lg bg-white mt-4">
@@ -520,7 +522,7 @@
                 <span class="text-base">for one user</span>
               </div>
               <div class="flex items-center justify-center">
-                <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+                <button class="mx-auto lg:mx-0 hover:underline bg-gradient-to-r from-red-500 via-purple-500 to-green-300 text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
                   Sign Up
                 </button>
               </div>
@@ -529,7 +531,7 @@
           <div class="flex flex-col w-5/6 lg:w-1/3 mx-auto lg:mx-0 rounded-lg bg-white mt-4 sm:-mt-6 shadow-lg z-10">
             <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
               <div class="w-full p-8 text-3xl font-bold text-center">Basic</div>
-              <div class="h-1 w-full gradient my-0 py-0 rounded-t"></div>
+              <div class="h-1 w-full bg-gradient-to-r from-red-500 via-purple-500 to-green-300 my-0 py-0 rounded-t"></div>
               <ul class="w-full text-center text-base font-bold">
                 <li class="border-b py-4">Thing</li>
                 <li class="border-b py-4">Thing</li>
@@ -543,7 +545,7 @@
                 <span class="text-base">/ per user</span>
               </div>
               <div class="flex items-center justify-center">
-                <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+                <button class="mx-auto lg:mx-0 hover:underline bg-gradient-to-r from-red-500 via-purple-500 to-green-300 text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
                   Sign Up
                 </button>
               </div>
@@ -566,7 +568,7 @@
                 <span class="text-base">/ per user</span>
               </div>
               <div class="flex items-center justify-center">
-                <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+                <button class="mx-auto lg:mx-0 hover:underline bg-gradient-to-r from-red-500 via-purple-500 to-green-300 text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
                   Sign Up
                 </button>
               </div>
@@ -677,12 +679,6 @@
       </div>
     </footer>
 
-
-    <div class="relative h-32 overflow-hidden">
-        <div class="absolute bottom-0 left-0 w-full h-full bg-gradient-to-t from-teal-400 to-indigo-500 animate-wave"></div>
-      </div>
-
-
     <script>
       var scrollpos = window.scrollY;
       var header = document.getElementById("header");
@@ -698,7 +694,7 @@
         if (scrollpos > 10) {
           header.classList.add("bg-white");
           navaction.classList.remove("bg-white");
-          navaction.classList.add("gradient");
+          navaction.classList.add("bg-gradient-to-r from-red-500 via-purple-500 to-green-300");
           navaction.classList.remove("text-gray-800");
           navaction.classList.add("text-white");
           //Use to switch toggleColour colours
@@ -711,7 +707,7 @@
           navcontent.classList.add("bg-white");
         } else {
           header.classList.remove("bg-white");
-          navaction.classList.remove("gradient");
+          navaction.classList.remove("bg-gradient-to-r from-red-500 via-purple-500 to-green-300");
           navaction.classList.add("bg-white");
           navaction.classList.remove("text-white");
           navaction.classList.add("text-gray-800");
