--- a/embedformtest.html
+++ b/embedformtest.html
@@ -9,7 +9,7 @@
       
 <div class="raisely-donate"
    data-campaign-path="menorca-horses"
-   data-profile="?utm_source=partnerwebsite.raisely.com"
+   data-profile="?utm_source=Bambu"
    data-width="100%"
    data-height="800">
    <script src="https://cdn.raisely.com/v3/public/embed.js"></script>
